<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="stSubTank" Id="{e9a53490-228b-497e-bd29-d25e8903f83a}">
    <Declaration><![CDATA[TYPE stSubTank :
STRUCT
	//R//						
		error_code			:INT;
		state				:INT;
		Error				:BOOL;
	//W//
		Setoff				:BOOL;	//  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>